<resources>
    <string name="app_name">AIS Autocare</string>
    <string name="title_main_activity">AIS Autocare</string>

    <!-- Title for activities. [CHAR LIMMIT=20] -->
    <string name="activity_profile">Profil</string>
    <string name="activity_history">Riwayat</string>
    <string name="activity_garage">Garasi</string>
    <string name="activity_add_vehicle">Tambah Kendaraan</string>
    <string name="activity_edit_vehicle">Ubah Kendaraan</string>
    <string name="activity_order">Pesanan</string>

    <!-- Title for fragments. [CHAR LIMIT=20] -->
    <string name="fragment_service">Pelayanan</string>
    <string name="fragment_care">Perawatan</string>
    <string name="fragment_repair">Perbaikan</string>
    <string name="fragment_emergency">Darurat</string>

    <!-- Title for drawer. [CHAR LIMIT=20] -->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- String values in profile activity. [CHAR LIMIT=20] -->
    <string name="username">Nama Pengguna</string>
    <string name="phone">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>

    <!-- String values in add vehicle activity. [CHAR LIMIT=20] -->
    <string name="choose_type">Jenis Kendaraan</string>
    <string name="choose_manufacturer">Pilih Merk Kendaraan</string>
    <string name="choose_manufacturer_type">Pilih Model Kendaraan</string>
    <string name="fill_year">Isi Tahun Keluaran</string>
    <string name="choose_model">Pilih Model</string>
    <string name="choose_year">Pilih Tahun</string>
    <string name="choose_transmission">Pilih Transmisi</string>

    <!-- String values in LoginActivity -->
    <string name="login">Masuk</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="create_account">Buat akun</string>

    <!-- String values in RegisterActivity -->
    <string name="retype_password">Ulangi Kata Sandi</string>
    <string name="register">Daftar</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="login_here">Masuk</string>

    <!-- Button. [CHAR LIMIT=20] -->
    <string name="emergency_button">Emergency</string>

    <!-- Rating Dialog -->
    <string name="thank_you">Terima Kasih</string>
    <string name="submit">Kirim</string>

    <string name="minimum_password">Password minimal 6 karakter</string>
    <string name="auth_failed">Login gagal</string>
    <string name="auth_logout">Anda telah Keluar</string>
    <string name="logout">Keluar</string>

    <string-array name="values">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4 is really long</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>

    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
</resources>
