<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_vehicle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aisautocare.mobile.activity.EditVehicleActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="16dp">

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/edit_vehicle_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_type"/>
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/accent_color" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/edit_vehicle_manufacture_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_manufacturer"
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/accent_color" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/edit_vehicle_manufacture_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choose_manufacturer_type"
            app:met_floatingLabel="normal"
            app:met_primaryColor="@color/accent_color" />

        <EditText
            android:id="@+id/edit_vehicle_year_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fill_year"
            android:inputType="number"
            android:maxLength="4"
            android:paddingTop="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/edit_vehicle_submit_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/accent_color"
        android:text="Simpan"
        android:textStyle="bold" />
</LinearLayout>
